--- a/.htaccess
+++ b/.htaccess
@@ -7,9 +7,9 @@
 #	deny from all
 </Files>
 
-ExpiresActive On
-ExpiresDefault A1
-Header append Cache-Control must-revalidate
+#ExpiresActive On
+#ExpiresDefault A1
+#Header append Cache-Control must-revalidate
 
 # Security Headers
 # <IfModule mod_headers.c>
